# github-to-sops

./: .gitignore  CHANGELOG.md  LICENSE  README.md  github-to-age  github-to-sops  pixi.toml  pyproject.toml  setup.py  template.py  template.yaml
.githooks/: pre-push
.github/workflows/: publish.yml
demos/: decrypt.tape  setup.tape  updatekeys.tape
docs/plans/: 2026-06-16-github-integration-tests.md  2026-06-16-security-hardening.md
github-to-sops/: __init__.py
github_to_sops/: __init__.py
rattler/: recipe.yaml
tests/: test_github-to-sops.py  test_github_integration.py  test_github_to_sops.py
