[project]
name = "github-to-sops"
version = "1.1.0"
description = "Standalone (no-dependencies beyond Python) script fetches SSH keys of GitHub repository contributors and generates SOPS-compatible SSH key files."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Taras Glek"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [

]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
github-to-sops = "github_to_sops.__init__:main"

[project.urls]
Homepage = "https://github.com/tarasglek/github-to-sops"
Changelog = "https://github.com/tarasglek/github-to-sops/releases"
Issues = "https://github.com/tarasglek/github-to-sops/issues"
CI = "https://github.com/tarasglek/github-to-sops/actions"
