[project]
name = "github-to-sops"
version = "3.1.1"
description = "Standalone script fetches SSH keys of GitHub repository collaborators or specified users and generates SOPS-compatible SSH key files."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Taras Glek" }]
license = "MIT"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["github_to_sops"]

[project.scripts]
github-to-sops = "github_to_sops.__init__:main"

[project.urls]
Homepage = "https://github.com/tarasglek/github-to-sops"
Changelog = "https://github.com/tarasglek/github-to-sops/releases"
Issues = "https://github.com/tarasglek/github-to-sops/issues"
CI = "https://github.com/tarasglek/github-to-sops/actions"
